--- a/static-mirror/products/daily-support.html
+++ b/static-mirror/products/daily-support.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="../index.htmlproducts/daily-support"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">    <link rel="canonical" href="../index.htmlproducts/daily-support"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       daily neuroprotection
  &ndash; No Bad Days</title>
 
