Update email forms to route to dberzin@hotmail.com via FormSubmit

--- a/static-mirror/blogs/news.html
+++ b/static-mirror/blogs/news.html
@@ -6096,8 +6096,8 @@ Item added to your cart
           >
             <p>Join our email list for exclusive offers and the latest news. </p>
           </div><div >
-            <form method="post" action="/contact#contact_form" id="contact_form" accept-charset="UTF-8" class="newsletter-form"><input type="hidden" name="form_type" value="customer" /><input type="hidden" name="utf8" value="✓" />
-              <input type="hidden" name="contact[tags]" value="newsletter">
+            <form method="post" action="https://formsubmit.co/dberzin@hotmail.com" id="contact_form" accept-charset="UTF-8" class="newsletter-form"><input type="hidden" name="form_type" value="customer" /><input type="hidden" name="utf8" value="✓" />
+              <input type="hidden" name="contact[tags]" value="newsletter"><input type="hidden" name="_subject" value="Newsletter Signup - No Bad Days"><input type="hidden" name="_next" value="https://nobad-day-static.vercel.app/?submitted=1"><input type="hidden" name="_captcha" value="false">
               <div
                 class="newsletter-form__field-wrapper scroll-trigger animate--slide-in"
                 
