Add pre-release modal for login and purchase buttons

--- a/static-mirror/account/login.html
+++ b/static-mirror/account/login.html
@@ -5969,5 +5969,5 @@ await import("//nobad.day/cdn/shopifycloud/shop-js/modules/v2/chunk.modal_OrVZAp
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-</body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
