--- a/static-mirror/cart.html
+++ b/static-mirror/cart.html
@@ -5979,5 +5979,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-</body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
