--- a/static-mirror/index.html
+++ b/static-mirror/index.html
@@ -6601,5 +6601,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-</body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
