--- a/static-mirror/pages/about.html
+++ b/static-mirror/pages/about.html
@@ -5898,5 +5898,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-</body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
