--- a/static-mirror/pages/contact.html
+++ b/static-mirror/pages/contact.html
@@ -5873,5 +5873,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-</body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
