Fix prerelease modal script paths for subdirectories

--- a/static-mirror/collections/all.html
+++ b/static-mirror/collections/all.html
@@ -7002,5 +7002,5 @@ Price
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-<script src="/prerelease-modal.js"></script></body>
+<script src="../prerelease-modal.js"></script></body>
 </html>
