--- a/static-mirror/products/no-bad-days.html
+++ b/static-mirror/products/no-bad-days.html
@@ -7394,5 +7394,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-<script src="../prerelease-modal.js"></script></body>
+<script src="/prerelease-modal.js"></script></body>
 </html>
