Fix canonical URLs to use correct domain (nobad.day) and add sitemap.xml

--- a/static-mirror/products/m-balance.html
+++ b/static-mirror/products/m-balance.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">    <link rel="canonical" href="https://nobad-day-static.vercel.appproducts/m-balance"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">    <link rel="canonical" href="https://nobad.day/products/m-balance"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       m balance
  &ndash; No Bad Days</title>
 
