Improve GA4 tracking: add gtag.js script tag and enhance tracking

--- a/static-mirror/cart.html
+++ b/static-mirror/cart.html
@@ -699,7 +699,10 @@ await import("//nobad.day/cdn/shopifycloud/shop-js/modules/v2/chunk.common_Bq80O
   data-shs-export-with-fetch="true"
   data-shs-logs-sample-rate="1"
 ></script>
-<script src="/ga4-tracking.js"></script></head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BM323918MC"></script>
+<script src="/ga4-tracking.js"></script>
+</head>
 
   <body class="gradient">
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
