--- a/static-mirror/blogs/news.html
+++ b/static-mirror/blogs/news.html
@@ -6292,5 +6292,5 @@ Item added to your cart
         countrySelectorSearchCount: `[count] countries/regions found`,
       };
     </script><style>  </style>
-<script src="/prerelease-modal.js"></script></body>
+<script src="/blog-pagination.js"></script><script src="/prerelease-modal.js"></script></body>
 </html>
