--- a/static-mirror/account/login.html
+++ b/static-mirror/account/login.html
@@ -5913,7 +5913,7 @@ await import("//nobad.day/cdn/shopifycloud/shop-js/modules/v2/chunk.modal_OrVZAp
     <div class="footer__content-bottom-wrapper page-width">
       <div class="footer__copyright caption">
         <small class="copyright__content"
-          >&copy; 2026, <a href="/" title="">No Bad Days</a>copy; 2026, <a href="/" title="">No Bad Days</a></small>
+          >&copy; 2026, <a href="/" title="">No Bad Days</a>copy; 2026, <a href="/" title="">No Bad Days</a>copy; 2026, <a href="/" title="">No Bad Days</a></small>
         <small class="copyright__content"><a target="_blank" rel="nofollow" href="https://www.shopify.com?utm_campaign=poweredby&amp;utm_medium=shopify&amp;utm_source=onlinestore">Powered by Shopify</a></small></div>
     </div>
   </div>
